# mara_moveit_tutorials

move_group_interface/: CMakeLists.txt  package.xml
move_group_interface/config/: mara.srdf
move_group_interface/launch/: test_app.launch.py
move_group_interface/src/: move_group_interface_tutorial.cpp
